# zero2prod

./: .env  .gitlab-ci.yml  Cargo.toml  README.md
migrations/: 20240918050632_create_subscriptions_table.sql
src/: configuration.rs  configuration.yaml  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
