[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
#actix-http = "3.0.0-beta.10"
reqwest = "0.12"
tokio = "1"
serde = {version = "1.0.115", features = ["derive"]}

sqlx = {version = "0.8", default-features =false, features = [
        "runtime-tokio-rustls",
        "macros",
        "postgres",
        "uuid",
        "chrono",
        "migrate"
    ]}
config = { version = "0.14", default-features = false, features = ["yaml"] }

[lib]
path = "src/lib.rs"
name = "zero2prod"
