[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
#actix-http = "3.0.0-beta.10"
reqwest = "0.12"
tokio = "1"
serde = {version = "1.0.115", features = ["derive"]}

sqlx = {version = "0.8", default-features =false, features = [
        "runtime-tokio-rustls",
        "macros",
        "postgres",
        "uuid",
        "chrono",
        "migrate"
    ]}
config = { version = "0.14", default-features = false, features = ["yaml"] }
uuid = { version = "1.10.0", features = ["v4"]}
chrono = "0.4.15"
tracing = {version = "0.1", features = ["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = {version="0.3.18", features=["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"

[lib]
path = "src/lib.rs"
name = "zero2prod"
